--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Owais Ali"
 title_separator          : "-"
 name                     : &name "Owais Ali"
 description              : &description "Final year Software Engineering Student at BUITEMS"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://engr-owais-ali.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "engr-owais-ali.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
